Removed obsolete role-based functionality and associated tests, standardized code formatting across services.